--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
-                    <h2 class="margin-top-0 text-primary">Built On The Bootstrap Grid</h2>
+                    <h2 class="margin-top-0 text-primary">Problem Statement</h2>
                     <br>
                     <p class="text-faded">
-                        Bootstrap's responsive grid comes in 4 sizes or "breakpoints": tiny (xs), small(sm), medium(md) and large(lg). These 4 grid sizes enable you create responsive layouts that behave accordingly on different devices.
+                        Although many people want to keep track of various factors from their day to day, it’s hard to actively remember to write in a journal or curate a photo album. For people on the autism spectrum tracking activities and feelings is very important to diagnose certain triggers - however recording all of these factors is time-consuming and not user-friendly. Many devices only record one-off data points from a person’s day without putting these collections into valuable context.
                     </p>
                     <a href="#three" class="btn btn-default btn-xl page-scroll">Learn More</a>
                 </div>
@@ -77,90 +77,71 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="margin-top-0 text-primary">Flexible Layouts</h2>
+                    <h2 class="margin-top-0 text-primary">Conceptual Design</h2>
+                        <h3>User Groups </h3>                        
+                         <p >
+                        <ul style="text-align: left">
+                            <li><strong>Students or working professionals</strong> who lead a busy life and cannot take breaks to accurately reflect on their day. Although these users want to write down and journal about their day-to-day experiences, thoughts, and emotions, they find it difficult to commit to thoughtful journaling and are looking for a solution that can help them record their experiences in a way that is more casual. This group would use our wearable life-tracking advice to be able to keep track of their daily life experiences in a passive, low time-commitment, and customizable manner.<br>
+                            <strong>These users need:</strong> passive input options, stylish and interesting design, ability to look at past data and remember context</li> <br><br>
+                            <li><strong>Museum or conference visitors, attendees, and organizers<strong> could use the device to determine whether the reaction to the event or exhibition is positive or negative. While combining photos, videos, and recordings with emotions, these recordings get context and will be better reviewed and remembered. In these contexts it’s important for the device to not be distracting or take away from the reason a person is at a place.<br>
+                            <strong>These users need:</strong> rapid interaction learnability, encouragement or reminder to use throughout event, easy to distribute, large scale data output for institutions/conferences</li><br><br>
+                           <li><strong>Caretakers of children on the autism spectrum</strong> usually spend many hours of their day using apps that require completely manual input of data on how the person they care for is feeling or reacting to various input. Most of this data could be automatically gathered by a device worn by the child, leaving the caretaker with more time to garner valuable insights from the collection of data (instead of actually collecting it) and use that to do what they do best and care for the child.<br>
+                            <strong>These users need:</strong> comfortability, durability, and usability for children, meaningful results in context, non-prohibitive cost</li>
+                        </ul >
+                    </p>
+                    <p style="text-align: left">
+                        With these user groups in mind, we’ve developed a customizable bracelet which the user can add or remove sensor beads to suit their day to day lives.
+                        Since each bead is its own sensor, all it takes is a tap to the bead to activate it or to input an emotion. For example, a user is tracking their sadness, anxiousness, and happiness to try to figure out triggers and emotional hormonal cycle affects. An hour before lunch they are feeling sad and anxious so that use their finger to tap the sad and anxious beads on their Sentire bracelet. After lunch, they realize they are no longer feeling anxious or sad, but happy so they tap the happy bead. After two weeks of tracking these emotions, the user realizes most days before lunch they don’t feel very well, however after lunch they feel much better. The use of the beads can help users differentiate between regular mood changes and those out of the norm.<br><br>
+                        A bracelet is a better choice for more passive input than a cellphone, which could be in your pocket, backpack, purse, or anywhere else. While always accessible and visible, a bracelet is easy to remember to use. Because each person may have different emotions that they want to track or other sensor beads to use such as audio recording or photo taking, a user can change beads when they first use their bracelet or every day.
+                    </p>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Responsive</h3>
-                        <p class="text-muted">Your site looks good everywhere</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
-                        <h3>Customizable</h3>
-                        <p class="text-muted">Easy to theme and customize with SASS</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Consistent</h3>
-                        <p class="text-muted">A mature, well-tested, stable codebase</p>
-                    </div>
-                </div>
-            </div>
+            
+            <figure>
+              <img src="assets/sketches.jpg" alt="Sketches of Sentire" style="width: 100%" class="sentireimg">
+              <figcaption>Primary sketches of Sentire</figcaption>
+            </figure>
+
+            <figure>
+              <img src="assets/lowfidelity.jpg" alt="Low fidelity mock up of Sentire" style="width: 100%" class="sentireimg">
+              <figcaption>Low fidelity mockup of Sentire to get feeling of bracelet and potential user tasks</figcaption>
+            </figure>
+
         </div>
     </section>
-    <section id="three" class="no-padding container-fluid">
-        <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+ <hr>
+    <section id="three">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
                 <h2 class="text-center text-primary">Design Process</h2>
-                <hr>
-                <div class="media wow fadeInRight">
-                    <h3>Step 1</h3>
-                    <div class="media-body media-middle">
-                        <p>What could be easier? Get started fast with this landing page starter theme.</p>
-                    </div>
-                    <div class="media-right">
-                        <i class="icon-lg ion-ios-bolt-outline"></i>
-                    </div>
-                </div>
-                <hr>
-                <div class="media wow fadeIn">
-                    <h3>Step 2</h3>
-                    <div class="media-left">
-                        <a href="#alertModal" data-toggle="modal" data-target="#alertModal"><i class="icon-lg ion-ios-cloud-download-outline"></i></a>
-                    </div>
-                    <div class="media-body media-middle">
-                        <p>Yes, please. Grab it for yourself, and make something awesome with this.</p>
-                    </div>
-                </div>
-                <hr>
-                <div class="media wow fadeInRight">
-                    <h3>Step 3</h3>
-                    <div class="media-body media-middle">
-                        <p>Because you don't want your Bootstrap site, to look like a Bootstrap site.</p>
-                    </div>
-                    <div class="media-right">
-                        <i class="icon-lg ion-ios-snowy"></i>
-                    </div>
-                </div>
-                <hr>
-                <div class="media wow fadeIn">
-                    <h3>Step????</h3>
-                    <div class="media-left">
-                        <i class="icon-lg ion-ios-heart-outline"></i>
-                    </div>
-                    <div class="media-body media-middle">
-                        <p>There's good reason why Bootstrap is the most used frontend framework in the world.</p>
-                    </div>
-                </div>
-                <hr>
-                <div class="media wow fadeInRight">
-                    <h3>Tested</h3>
-                    <div class="media-body media-middle">
-                        <p>Bootstrap is matured and well-tested. It's a stable codebase that provides consistency.</p>
-                    </div>
-                    <div class="media-right">
-                        <i class="icon-lg ion-ios-flask-outline"></i>
-                    </div>
+                <p style="text-align: left">
+                    Our first physical prototype of the Sentire bracelet used velcro to attach “beads” as well as conductive snaps sewn in with conductive thread. During the creation of this first iteration of our design, we realized that it was redundant to use velcro as well as snaps to attach our sensor beads. Furthermore, it was difficult to sew into the velcro material, so we decided to remove velcro from our bracelet design and focused on just using the metal snaps for conductive customizability. <br><br>
+                    After nixing the velcro material, we used a piece of woven nylon instead of velcro to create a sturdy yet comfortable and soft bracelet with wires and snaps sewn in and attached to an Arduino. On the back of the nylon strap we sewed in the power, ground, and output wires. We attached the wires to the nylon strap by wrapping electrical tape around the wire end and sewing that into the strap. We sewed in snaps to the front of the nylon bracelet by first sewing them in with regular non conductive thread and then attaching them to the stripped wires on the other side of the bracelet with conductive thread. To secure the connection between the clasps and the stripped portion of the wires and to secure the fraying edges of the conductive thread,  we added some conductive paint to those sections.<br><br>
+                    To make the look of the beads more cohesive and consistent we sewed felt on top of the buttons which also improves aesthetic value, creates a softer tactile sensation, and conceals the conductive materials that complete the circuit. We added a green LED to the bracelet (that will eventually be sewn to the far edge of it) that gives the user indication that the bracelet is on and working. Now, we are writing a Python script that handles reading output from the Arduino serial port and posts is to an endpoint on our web app which then displays the data.
+                </p>
+
+                <figure>
+                    <img src="assets/prototype1.jpg" alt="Low fidelity mock up of Sentire" width = "30%">
+                     <figcaption>Our first physical prototype with velcro, <br>conductive thread, and power and ground wires</figcaption>
+                </figure><br><br>
+                <figure>
+                    <img src="assets/prototype2.jpg" alt="Low fidelity mock up of Sentire" width = "30%">
+                     <figcaption>Our second physical prototype with velcro, snaps, and conductive thread.<br> Our first bead was a temperature sensor</figcaption>
+                </figure><br><br>
+                <figure>
+                    <img src="assets/prototype3.jpg" alt="Low fidelity mock up of Sentire" width = "30%">
+                     <figcaption>Another functional prototype with nylon webbing, snaps, conductive thread, and wires.<br> The circuit on the bread board was eventually translated to the bracelet</figcaption>
+                </figure><br><br>
+                <h2 class="text-center text-primary">Final Design</h2>
+                <p style="text-align: left">
+                    Our final bracelet prototype features four modular buttons and three modular sensors that can be rearranged with each other. These can be attached to a one inch by nine inch strip of nylon webbing using conductive snaps. On the back of the nylon band, we have power and ground wires running the length of the bracelet to create a parallel circuit and seven output wires that bring data to an Arduino. To ensure all buttons and sensors worked correctly and were supplied with even voltage, each modular snap-in location has a resistor attaching the ground snap to the ground wire. This setup creates a fully functional parallel circuit with four digital output spots and three analog output spots. <br><br>The bracelet attached around the user’s wrist using velcro on both ends, and the Arduino is attached to a velcro running band that is traditionally used for keeping a phone in while on a run. The wires from the bracelet travel up the arm of the user, to the Arduino, and then to a computer where the data is put into graphs. A jQuery UI website accompanies the bracelet and allows the user to customize what they want to track with each button, and put their data into meaningful graphs and context. After a few days of using Sentire, the user can look at their graphs and see the trends in their eating, drinking, sleeping, or mood habits and see the correlation between their collected data graphs.
+
+
+              
                 </div>
             </div>
         </div>
@@ -170,7 +151,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/deer.jpg">
-                        <img src="./assets/deer.jpg" class="img-responsive" alt="Image 1">
+                        <img src="./assets/sentire1.jpg" class="img-responsive" alt="Image 1">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -182,7 +163,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
-                        <img src="./assets/beach.jpg" class="img-responsive" alt="Image 2">
+                        <img src="./assets/sentire2.jpg" class="img-responsive" alt="Image 2">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -195,7 +176,7 @@
                 <div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/lake.jpg">
-                        <img src="./assets/lake.jpg" class="img-responsive" alt="Image 3">
+                        <img src="./assets/sentire3.jpg" class="img-responsive" alt="Image 3">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -207,7 +188,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/bike.jpg">
-                        <img src="./assets/bike.jpg" class="img-responsive" alt="Image 4">
+                        <img src="./assets/sentire4.jpg" class="img-responsive" alt="Image 4">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -220,7 +201,7 @@
                 <div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/city.jpg">
-                        <img src="./assets/city.jpg" class="img-responsive" alt="Image 5">
+                        <img src="./assets/sentire5.jpg" class="img-responsive" alt="Image 5">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
@@ -232,7 +213,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/colors.jpg">
-                        <img src="./assets/colors.jpg" class="img-responsive" alt="Image 6">
+                        <img src="./assets/sentire6.jpg" class="img-responsive" alt="Image 6">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
