--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/deer.jpg">
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/sentire1.jpg">
                         <img src="./assets/sentire1.jpg" class="img-responsive" alt="Image 1">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
@@ -162,7 +162,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/sentire2.jpg">
                         <img src="./assets/sentire2.jpg" class="img-responsive" alt="Image 2">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
@@ -175,7 +175,7 @@
                 </div>
                 <div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/lake.jpg">
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/sentire3.jpg">
                         <img src="./assets/sentire3.jpg" class="img-responsive" alt="Image 3">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
@@ -187,7 +187,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/bike.jpg">
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/sentire4.jpg">
                         <img src="./assets/sentire4.jpg" class="img-responsive" alt="Image 4">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
@@ -200,7 +200,7 @@
                 </div>
                 <div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/city.jpg">
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/sentire5.jpg">
                         <img src="./assets/sentire5.jpg" class="img-responsive" alt="Image 5">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
@@ -212,7 +212,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/colors.jpg">
+                    <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="./assets/sentire6.jpg">
                         <img src="./assets/sentire6.jpg" class="img-responsive" alt="Image 6">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
